--- a/backend/AcompanhamentoPaciente.Api/AcompanhamentoPaciente.Api.csproj
+++ b/backend/AcompanhamentoPaciente.Api/AcompanhamentoPaciente.Api.csproj
@@ -7,14 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AcompanhamentoPaciente.Application\AcompanhamentoPaciente.Application.csproj" />
+    <ProjectReference Include="..\AcompanhamentoPaciente.Infrastructure\AcompanhamentoPaciente.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
