--- a/backend/AcompanhamentoPaciente.Api/appsettings.Development.json
+++ b/backend/AcompanhamentoPaciente.Api/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=acompanhamento_paciente;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Key": "SuaChaveSecretaParaJwtDeveTer32Caracteres!!",
+    "Issuer": "AcompanhamentoPaciente",
+    "Audience": "AcompanhamentoPaciente"
   }
 }
