feat: Initialize project structure with frontend API service, backend configuration, environment-specific settings, and run scripts.

--- a/backend/AcompanhamentoPaciente.Api/appsettings.Development.json
+++ b/backend/AcompanhamentoPaciente.Api/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -10,8 +11,14 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=acompanhamento_paciente;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Key": "SuaChaveSecretaParaJwtDeveTer32Caracteres!!",
+    "Key": "DevSecretKeyQueDeveTer32Caracteres!!",
     "Issuer": "AcompanhamentoPaciente",
     "Audience": "AcompanhamentoPaciente"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:5173",
+      "http://localhost:4173"
+    ]
   }
 }
