--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,7 @@ frontend/.vite/
 .DS_Store
 Thumbs.db
 
-# Environment
-*.env
+# Environment (local overrides only)
 *.env.local
 *.env.development.local
 *.env.test.local
