--- a/backend/AcompanhamentoPaciente.Api/appsettings.json
+++ b/backend/AcompanhamentoPaciente.Api/appsettings.json
@@ -5,13 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=acompanhamento_paciente;Username=postgres;Password=postgres"
-  },
-  "Jwt": {
-    "Key": "SuaChaveSecretaParaJwtDeveTer32Caracteres!!",
-    "Issuer": "AcompanhamentoPaciente",
-    "Audience": "AcompanhamentoPaciente"
-  }
+  "AllowedHosts": "*"
 }
