--- a/backend/AcompanhamentoPaciente.Api/appsettings.Development.json
+++ b/backend/AcompanhamentoPaciente.Api/appsettings.Development.json
@@ -15,6 +15,11 @@
     "Issuer": "AcompanhamentoPaciente",
     "Audience": "AcompanhamentoPaciente"
   },
+  "Google": {
+    "ClientId": "YOUR_GOOGLE_CLIENT_ID",
+    "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET"
+  },
+  "FrontendUrl": "http://localhost:5173",
   "Cors": {
     "AllowedOrigins": [
       "http://localhost:5173",
