feat: Set up AcompanhamentoPaciente.Api project with core dependencies and add secret management guidance to .gitignore.

--- a/backend/AcompanhamentoPaciente.Api/AcompanhamentoPaciente.Api.csproj
+++ b/backend/AcompanhamentoPaciente.Api/AcompanhamentoPaciente.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c488a18e-433d-464e-8e81-76f47f31890c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
