--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ backend/**/obj/
 backend/**/*.user
 backend/**/.vs/
 
+# Backend Local Secrets (Do not commit real secrets!)
+# appsettings.Development.json should have placeholder values in git
+# Use 'dotnet user-secrets' for local development secrets
+
 # Frontend
 frontend/node_modules/
 frontend/dist/
